@@ -2,6 +2,7 @@ ddetect (0.98) UNRELEASED; urgency=low
 
   * Per Olofsson
     - Only ask whether PCMCIA should be started once. Closes: #250285.
+    - Install /etc/pcmcia/config.opts using prebaseconfig.
 
  -- Per Olofsson <pelle@dsv.su.se>  Mon, 24 May 2004 21:58:05 +0200
 
